--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 * 
 {
-    box-sizing: border-box;
+    box-sizing:border-box;
 }
 
 body
@@ -9,7 +9,7 @@ body
     display: grid;
     background-image: url(img/chef.jpg);
     
-    display: flex table-row;
+    
     background: rgb(8,7,23);
     background: radial-gradient(circle, rgba(8,7,23,1) 0%, rgba(1,1,1,1) 100%);
     
@@ -34,15 +34,18 @@ body
 .links
 
 {  
-    justify-content: center;
+    text-align: center;
+    text-decoration: none;
+    color: rgb(256 256 256);
+    font-weight: bold;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     border-radius: 50%;
     display: flexbox;
     margin: 40px;
     background: rgb(2,0,36);
     background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(0,0,0,1) 84%, rgba(0,212,255,1) 100%);
-    height: 90px;
-    width: 90px;
+    height: 100px;
+    width: 100px;
 }   
 
 .chefboy 
@@ -59,13 +62,6 @@ body
 
 }
 
-.linksinbutton
-{
-    color: rgb(256 256 256);
-    font-weight: bold;
-    
-    
-}
 
 .recipe-links 
 
