--- a/styles.css
+++ b/styles.css
@@ -53,15 +53,17 @@ body
     margin: 5px;
     height: 400px;
     border-radius: 8px;
-    flex: 1;
-    transition: 250ms;
+    flex: auto;
     
+    transition: 250ms;
+    min-width: 250px;
+    min-height: 500px;
 }
 
 .links:hover
 {
     transition: all .2s ease-in-out;
-    background:50%;
+    background: 30%;
     
     transform: rotate3d(1, 10, -0.1, -20deg )
 }
@@ -77,6 +79,8 @@ body
 {
     background-image: url(img/Chef-Salad.jpg);
     background-size: cover;
+    
+    
 }
 
 .links:nth-child(3)
@@ -84,4 +88,3 @@ body
     background-size: cover;
     background-image: url(img/baconandeggs.jpg);
 }
-
